--- a/anova2.qmd
+++ b/anova2.qmd
@@ -447,26 +447,137 @@ frdAllPairsConoverTest(y = long_data$Measurements,
 
 As we can see, some pairs are inseparable and others are separable. We can now plot as for the other problems.
 
-## Homework: Chapter 12
+## Homework: Two-way ANOVA
 
-State your hypotheses in sentence form and mathematically. Then, identify the appropriate ANOVA and perform the analysis. If you *reject* the null, evaluate a Tukey test and plot your results, showing letters denoting each group. **Note** that some questions may be non-parametric.
+This homework requires you to install `tidytuesdayR`.
 
-**Remember, only plot the results if you reject your *primary hypothesis*.**
+**For each question**:
 
-### Question 1
+1.  State your null and alternative hypotheses
+2.  Justify what type of ANOVA you think this is and why.
+3.  Test for normality relative to the *primary hypothesis*
+4.  Perform the appropriate ANOVA
+5.  Interpret the results and provide a conclusion
+6.  If there are any additional questions, be sure to address them
 
-```{r}
-tuesdata <- tidytuesdayR::tt_load(2025, week = 13)
+### Question 1: Stat-y Spice
 
-pokemon_df <- tuesdata$pokemon_df
+You and your friends are jamming out to the *Spice Girls*, like you do every Tuesday night, when you get into a heated debate about which of their songs are the most danceable. Amidst all the bickering, you make out that some of your friends are fixated on the year the song came out, while others are arguing that they have more success making "bangers" in major keys than they do in minor keys. In order to save your friend group from infighting, you decide to perform a two-way ANOVA on release year and whether the song is in a major or a minor key and how those factors affect danceability.
 
-pokemon_df |> 
-  dplyr::mutate(attack_defense = attack/defense) ->
-  pokemon_df
+Load the following table, where:
+
+-   Release year = `album_release_year`
+
+-   Major or minor key = `mode_name`
+
+-   Danceability = `danceability`
+
+```{r, message = F, eval = F}
+tuesdata <- tidytuesdayR::tt_load(2021, week = 51)
+
+studio_album_tracks <- tuesdata$studio_album_tracks
 ```
 
-```{r, eval = F, results = F}
-poke_aov <- aov(data = pokemon_df, attack_defense ~ type_1 + egg_group_1)
+```{r, eval = F, results = F, echo = F}
+aov <- run_twoway(data = studio_album_tracks,dv = "danceability", 
+                  factor_a = "album_release_year", factor_b = "mode_name",
+                  include_interaction = TRUE, 
+                  which_factor = "album_release_year:mode_name")
 
-summary(poke_aov)
+studio_album_tracks |> filter(track_name == "Who Do You Think You Are")
+
+aov$plot
 ```
+
+### Question 2: All alone...
+
+You and your study group are binge-watching the TV show [*Alone*](https://www.history.com/shows/alone) while studying for your history final (it is on the *History* channel, so it has to help somehow, right?). One of your buddies says that the show is inherently unfair, because men are better at survival techniques than women are. This rubs you the wrong way, so you want to see if there is any merit to his claims. You decide to analyze the number of days people are able to last in the show, divided by gender. You also realize that there are cultural differences between countries, so you want to account for any error due to cultural background when you perform your test.
+
+-   Gender of participant = `gender`
+
+-   Country of origin = `country`
+
+-   Length of time lasted = `days_lasted`
+
+```{r, message = F, eval = F}
+tuesdata <- tidytuesdayR::tt_load(2023, week = 4)
+
+alone <- tuesdata$survivalists|> 
+  filter(country == "United States" | country == "Canada")
+```
+
+```{r, echo = F, eval = F}
+aov <- run_rm(data = alone, dv = "days_lasted", id = "country", within = "gender", which_within = "gender")
+
+#aov <- run_twoway(data = alone2, 
+#                  dv = "days_lasted", 
+#                  factor_a = "gender", 
+#                  factor_b = "country", 
+#                  include_interaction = T, 
+#                  which_factor = "gender:country")
+
+```
+
+### Question 3: Penguins (not of Madagascar)
+
+Talking to Dr. Cooper after class about niche ecology, you become fascinated by the idea of similar species having morphological differences to allow them to co-occur in different areas. You decide to see if there are any morphological differences between penguin species on Antarctic islands. You decide to examine populations of thee congeneric penguins that are regionally sympatric: Adelie Penguin *Pygoscelis adeliae*, Chinstrap Penguin *P. antarcticus*, and Gentoo Penguin *P.* \[*papua*\] *ellsworthi*. You anticipate that there will be differences in bill length among species, but you also know that there is intraspecific competition within species because you did not fall asleep in your evolution class and know that this may also have an effect on bill lengths. In your conclusion, be sure to state which groups are (or are not) different.
+
+```{r, message=FALSE, eval = F}
+penguins <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2025/2025-04-15/penguins.csv')
+```
+
+```{r, eval = F, echo = F}
+penguins |> group_by(species) |> summarise(pv = shapiro.test(log1p(bill_len))$p.value)
+
+penguins <- penguins |> mutate(log_bill = log1p(bill_len))
+
+aov <- run_twoway(data = penguins, dv = "bill_len", factor_a = "species", factor_b = "sex",
+                  include_interaction = T, which_factor = "species:sex")
+
+aov$plot
+```
+
+### Question 4: Mankind's biggest foe
+
+Mosquitoes kill more people than any other animal every year. One of the ways in which humans die from mosquitoes is by infecting them with malaria. While malaria has been largely eradicated in North America, it still persists in the Caribbean, Central America, and South America.
+
+Load the `malaria` dataset below, and:
+
+1.  Filter for the `entity` of `Andean Latin America`, `Caribbean`, `Central Latin America`, `Southern Latin America`, and `Tropical Latin America`.
+2.  Filter only for years that are 2012 or more recently.
+3.  Compare malaria deaths by country, taking into account that year may also be a source of variation for deaths (i.e., via outbreaks).
+4.  *These data are non-normal, but for the purposes of this problem, perform a standard ANOVA on the non-transformed data.*
+
+```{r, message = F, eval = F}
+malaria <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2018/2018-11-13/malaria_deaths_age.csv')
+```
+
+```{r, eval = F, echo = F}
+malaria <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2018/2018-11-13/malaria_deaths_age.csv') |> 
+  filter(deaths > 0) |> 
+  filter(entity == "Andean Latin America" | 
+           entity == "Caribbean" | 
+           entity == "Central Latin America" | 
+           entity == "Southern Latin America" | 
+           entity == "Tropical Latin America") |> 
+  mutate(age_group = as.factor(age_group)) |> 
+  filter(year > 2011)
+```
+
+```{r, message = F, echo = F, eval = F}
+malaria |> 
+  group_by(entity) |> 
+  summarise(pv = shapiro.test(log1p(deaths))$p.value)
+
+aov <- run_twoway(data = malaria, dv = "deaths", factor_a = "entity", factor_b = "year", include_interaction = T, which_factor = "entity")
+
+aov$plot
+```
+
+### Question 6: Your turn!
+
+Using datasets from `tidytuesdayR` ([viewable here](https://github.com/rfordatascience/tidytuesday)), create your own two-way ANOVA homework problem.
+
+-   You are allowed to work with others, but you *must* say who you worked with if you do. Please keep group sizes ≤ 4.
+
+-   Your problem *must* include a worked through "key" showing how the homework problem should be done based on the prompt.
